--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
 			</div>
 		</header>
 		<section class="main-content">
-			<h1 class="main-content__title">Indonesia</h1>
-			<p class="main-content__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities. </p>
-			<a href="#" class="main-content__button">Book travel</a>
-			<div class="main-content__image">
-				<div class="main-content__image main-content__image_one"></div>
-				<div class="main-content__image main-content__image_two"></div>
-				<div class="main-content__image main-content__image_three"></div>
+			<div class="main-content-left">
+				<h1 class="main-content-left__title">Indonesia</h1>
+						<p class="main-content-left__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities. </p>
+						<a href="#" class="main-content-left__button">Book travel</a>
+			</div>
+			<div class="main-content-right__image">
+				<div class="main-content-right__image main-content-right__image_one"></div>
+				<div class="main-content-right__image main-content-right__image_two"></div>
+				<div class="main-content-right__image main-content-right__image_three"></div>
 			</div>
 		</section>
 	</div>
