--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<logo class="logo">
-				<div class=" logo logo__liner"></div>
+				<div class=" logo logo__liner"><img src="image/Vector.svg" alt=""></div>
 			</logo>
 			<div class="burger__menu">
 				<input type="checkbox" id="menu__burger">
@@ -22,22 +22,22 @@
 				<nav class="menu">
 					<a href="" class="menu__item">Start</a>
 					<a href="" class="menu__item">Services</a>
-					<a href="" class="menu__item">about</a>
-					<a href="" class="menu__item">blog</a>
-					<a href="" class="menu__item">contact us</a>
+					<a href="" class="menu__item">About</a>
+					<a href="" class="menu__item">Blog</a>
+					<a href="" class="menu__item">Contact us</a>
 				</nav>
 			</div>
 		</header>
 		<section class="main-content">
 			<div class="main-content-left">
 				<h1 class="main-content-left__title">Indonesia</h1>
-						<p class="main-content-left__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities. </p>
+						<p class="main-content-left__subtitle">Best Bali travel guide   with  great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities. </p>
 						<a href="#" class="main-content-left__button">Book travel</a>
 			</div>
 			<div class="main-content-right__image">
-				<div class="main-content-right__image main-content-right__image_one"></div>
-				<div class="main-content-right__image main-content-right__image_two"></div>
-				<div class="main-content-right__image main-content-right__image_three"></div>
+				<div class="main-content-right__image main-content-right__image_one"><img src="image/one-min.png" alt=""></div>
+				<div class="main-content-right__image main-content-right__image_two"><img src="image/two-min.png" alt=""></div>
+				<div class="main-content-right__image main-content-right__image_three"><img src="image/three-min.png" alt=""></div>
 			</div>
 		</section>
 	</div>
