--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<logo class="logo">
-				<div class=" logo logo__liner"><img src="image/Vector.svg" alt=""></div>
+				<div class=" logo logo__liner"> alt=""></div>
 			</logo>
 			<div class="burger__menu">
 				<input type="checkbox" id="menu__burger">
