--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<div class="wrapper">
 		<header class="header">
 			<logo class="logo">
-				<div class=" logo logo__liner"> alt=""></div>
+				<div class=" logo logo__liner"></div>
 			</logo>
 			<div class="burger__menu">
 				<input type="checkbox" id="menu__burger">
-				<label  class="menu__button" for="menu__toggle">
+				<label  class="menu__button" for="menu__burger">
 					<span></span>
 				</label>
 				<nav class="menu">
@@ -35,9 +35,9 @@
 						<a href="#" class="main-content-left__button">Book travel</a>
 			</div>
 			<div class="main-content-right__image">
-				<div class="main-content-right__image main-content-right__image_one"><img src="image/one-min.png" alt=""></div>
-				<div class="main-content-right__image main-content-right__image_two"><img src="image/two-min.png" alt=""></div>
-				<div class="main-content-right__image main-content-right__image_three"><img src="image/three-min.png" alt=""></div>
+				<div class="main-content-right__image main-content-right__image_one"></div>
+				<div class="main-content-right__image main-content-right__image_two"></div>
+				<div class="main-content-right__image main-content-right__image_three"></div>
 			</div>
 		</section>
 	</div>
